--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -11,10 +11,12 @@
   <div class="calendar">
     <% @week_days.each do |day| %>
       <div class="item">
+        <div class="date">
+        </div>
         <ul class="content">
         <% if day[:plans].length != 0 %>
           <% day[:plans].each do |plan| %>
-            <li class='plan-list'>・<%= plan %></li>
+            <li class="plan-list">・<%= plan %></li>
           <% end %>
         <% end %>
         </ul>
